added new rendering for loading Textures of type PNG and JPG using SDL2_image

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,4 +5,4 @@ SRC_DIR = scripts/
 SRC_FILES = $(addprefix $(SRC_DIR), $(SOURCES))
 
 all:
-	g++ -I include -L lib -o main $(SRC_FILES) -lmingw32 -lSDL2main -lSDL2
+	g++ -I include -L lib -o main $(SRC_FILES) -lmingw32 -lSDL2main -lSDL2 -lSDL2_image
