--- a/src/Makefile
+++ b/src/Makefile
@@ -6,4 +6,4 @@ IMGUI_SOURCES = $(wildcard scripts/ImGUI/*.cpp)
 SRC_FILES = $(addprefix $(SRC_DIR), $(SOURCES)) $(IMGUI_SOURCES)
 
 all:
-	g++ -I include -Iheaders/ImGUI -L lib -o main $(SRC_FILES) -lmingw32 -lSDL2main -lSDL2 -lSDL2_image
+	g++ -I include -Iheaders -Iheaders/ImGUI -L lib -o main $(SRC_FILES) -lmingw32 -lSDL2main -lSDL2 -lSDL2_image
