added some very basic native scripting functionality

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 
-SOURCES = Main.cpp Window.cpp Gameobject.cpp Gamescreen.cpp FileManager.cpp Serilization.cpp Camera.cpp
+SOURCES = Main.cpp Window.cpp Gameobject.cpp Gamescreen.cpp FileManager.cpp Serilization.cpp Camera.cpp LuaFunctions.cpp
 SRC_DIR = scripts/
 
 SRC_FILES = $(addprefix $(SRC_DIR), $(SOURCES))
 
 all:
-	g++ -I include -Iheaders -Iheaders/ImGUI -L lib -o main $(SRC_FILES) -limgui -lmingw32 -lcomdlg32 -lSDL2main -lSDL2 -lSDL2_image
+	g++ -I include -Iheaders -Iheaders/ImGUI -Iheaders/Lua -Iheaders/Sol -L lib -o main $(SRC_FILES) -limgui -llua -lmingw32 -lcomdlg32 -lSDL2main -lSDL2 -lSDL2_image
