--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,16 +10,18 @@ build:
   image: gcc:latest 
   script:
     - echo "Building the project "
+    - cd ${BUILD_DIR}
     - make 
     - ls -lah 
   artifacts:
     paths:
-      - main.exe  
+      - ${BUILD_DIR}/main.exe
 
 test:
   stage: test
   image: gcc:latest
   script:
     - echo "Running main.exe..."
+    - cd ${BUILD_DIR}
     - chmod +x main.exe  
     - ./main.exe  
