--- a/src/imgui.ini
+++ b/src/imgui.ini
@@ -20,15 +20,15 @@ Size=171,232
 
 [Window][GameObject Manager]
 Pos=0,18
-Size=160,640
+Size=308,793
 
 [Window][Controller]
 Pos=59,73
 Size=200,100
 
 [Window][File Manager]
-Pos=160,450
-Size=640,190
+Pos=308,563
+Size=1228,230
 
 [Window][GameObject Properties]
 Pos=1286,20
@@ -43,6 +43,10 @@ Pos=550,20
 Size=250,620
 
 [Window][Object Properties]
-Pos=550,20
-Size=250,620
+Pos=1286,18
+Size=250,545
+
+[Window][Camera Properties]
+Pos=1286,18
+Size=250,545
 
