--- a/src/Makefile_test
+++ b/src/Makefile_test
@@ -4,9 +4,9 @@ INCLUDE_DIR := include
 LIB_DIR := lib
 
 TARGET := main
-TEST_TARGET := unit_tests
+TEST_TARGET := basic_tests
 
-# === SOURCES ==
+# === SOURCES ===
 SOURCES := Main.cpp Window.cpp Gameobject.cpp Gamescreen.cpp Filemanager.cpp Serilization.cpp Camera.cpp LuaFunctions.cpp Collision.cpp
 SRC_FILES := $(addprefix $(SRC_DIR)/, $(SOURCES))
 
